# mtp-nodejs-port-native-addon

./: .eslintignore  .eslintrc.js  .gitignore  CMakeLists.txt  README.md  autogypi.json  babel.config.js  binding.gyp  index.js  package.json  run.js  test.js
lib/: helper.js  index.js  mtp-helper.js
src/: index.js  mtp-device-flags.js  mtp-error-flags.js  mtp-helper.js  mtp.cc  test.js
src/classes/: mtp-kernel.js
src/constants/: mtp-device-flags.js
src/device/: release.js
src/helpers/: mtp-helper.js
src/inc/: common.h  ptp.h
src/lib/: libmtp-9.lib
src/native/: mtp.cc
src/native/inc/: libmtp.h
src/native/lib/: libmtp.dylib  libusb-1.0.0.dylib
src/utils/: cli.js  functs.js
webpack/: webpack.config.base.js  webpack.config.dev.js  webpack.config.prod.js
